<resources>
    // main
    <string name="app_name">Quintic</string>
    <string name="app_title">Quintic Journal</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_calendar">Calendar</string>

    // settings
    <string name="dark_toggle_title">Dark mode</string>
    <string name="dark_toggle_summary">Toggle dark mode for Quintic</string>
    <string name="save">Save</string>
    <string name="documentation">Documentation</string>
    <string name="help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="calendar">Calendar</string>
    <string name="button_yes">yes</string>
    <string name="button_no">no</string>
    <string name="github_link_readme">
        "https://github.com/jerrwu/Quintic/blob/master/README.md"</string>
    <string name="github_link_issues">
        "https://github.com/jerrwu/Quintic/issues"
    </string>
    <string name="github_link_main">
        "https://github.com/jerrwu/Quintic"
    </string>
    <string name="selection">Selection</string>
    <string name="save_entry">Save entry</string>
    <string name="delete_entry">Delete entry</string>
    <string-array name="dark_mode">
        <item>"Follow System Theme"</item>
        <item>"Set by Battery Saver"</item>
        <item>"On"</item>
        <item>"Off"</item>
    </string-array>
    <string-array name="dark_mode_values">
        <item>"-1"</item>
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
    </string-array>
    <string name="created_on">"Created on "</string>
    <string name="set_your_name">Hey! Set your name!</string>
    <string name="confirm_restart_title">Restart App?</string>
    <string name="confirm_restart">An app restart is recommended after changing this setting. Restart now?</string>
    <string name="restart_no">Later</string>
    <string name="restart_yes">Restart</string>

    <string name="search">" Search"</string>
    <string name="no_results">No results</string>
    <string name="create_new_entry">New entry</string>
    <string name="edit_entry">Edit entry</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="back">Back</string>

    // greetings
    <string name="greeting_early_morning">Happy early morning!</string>
    <string name="greeting_late_night">Happy late night!</string>
    <string name="greeting_morning">Have a good morning!</string>
    <string name="greeting_lunch">It\'s lunch time!</string>
    <string name="greeting_afternoon">Enjoy a beautiful afternoon!</string>
    <string name="greeting_evening">Have a wonderful evening!</string>
    <string name="greeting_night">It\'s getting late!</string>
    <string name="greeting_default">hie…</string>

    // delete dialog
    <string name="confirm_delete_title">Delete Entry?</string>
    <string name="confirm_delete">This entry cannot be recovered after it has been deleted, continue?</string>
    <string name="delete_yes">Delete</string>
    <string name="delete_no">Cancel</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_multiple_title">Delete Entries?</string>
    <string name="confirm_delete_multiple">Selected entries will be deleted and cannot be recovered, continue?</string>
    <string name="no_entries_remind">You have no entries!</string>
    <string name="daily_entry">Create new daily entry</string>
    <string name="late_night">Late Night</string>
    <string name="early_morning">Early Morning</string>
    <string name="morning">Morning</string>
    <string name="midday">Midday</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="add_image">Add image</string>
    <string name="add_mood">Add mood</string>
    <string name="jerry_epic">jerry is an epic name!</string>
    <string name="search_entries_by">Search entries by</string>
    <string name="mood">Mood</string>
    <string name="recent_months">Recent &amp; Upcoming Months</string>
    <string name="time_of_day">Time of Day</string>
    <string name="month_year_not_exist">No data in selected time period!</string>
    <string name="no_entries">No entries!</string>
    <string name="ok">Ok</string>
    <string name="changelog">Changelog</string>
    <string name="updated_to_version">Updated to version</string>
  
    // Tags
    <string name="edit_tags">Edit tags</string>
    <string name="tags">Tags</string>
    <string name="new_tag">New tag</string>
    <string name="cancel">Cancel</string>


    // Shortcuts
    <string name="shortcut_entry_short">New Entry</string>
    <string name="shortcut_entry_long">Create a New Entry</string>
    <string name="shortcut_account_short">Account</string>
    <string name="shortcut_account_long">View Account Details</string>
    <string name="shortcut_settings_short">Settings</string>
    <string name="shortcut_settings_long">Edit Settings</string>
    <string name="refresh_error">Couldn\'t refresh!</string>
    <string name="discard_entry">Discard Entry?</string>
    <string name="discard_entry_descrip">Do you want to discard changes made to this entry? This action is not recoverable.</string>
    <string name="discard">Discard</string>
    <string name="dismiss">Dismiss</string>
    <string name="change_now">Change now</string>
</resources>
