<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:scrollbars="none"
    android:descendantFocusability="blocksDescendants"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.fragment.SearchFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAllCaps="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textSize="12sp"
            android:fontFamily="@font/productsansmedium"
            android:textColor="@color/colorSecondary"
            android:text="@string/mood"
            android:id="@+id/search_section_mood_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            tools:listitem="@layout/mood_category_card"
            android:layout_below="@id/search_section_mood_text"
            android:scrollbars="none"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:id="@+id/mood_search_carousel"
            android:layout_width="match_parent"
            android:layout_height="156dp" />

        <TextView
            android:textAllCaps="true"
            android:layout_below="@id/mood_search_carousel"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textSize="12sp"
            android:fontFamily="@font/productsansmedium"
            android:textColor="@color/colorSecondary"
            android:text="@string/time_of_day"
            android:id="@+id/search_section_hours_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            tools:listitem="@layout/hours_category_card"
            android:layout_below="@id/search_section_hours_text"
            android:scrollbars="none"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:id="@+id/hours_search_carousel"
            android:layout_width="match_parent"
            android:layout_height="156dp" />

        <TextView
            android:textAllCaps="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textSize="12sp"
            android:layout_below="@id/hours_search_carousel"
            android:fontFamily="@font/productsansmedium"
            android:textColor="@color/colorSecondary"
            android:text="@string/recent_months"
            android:id="@+id/search_section_month_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            tools:listitem="@layout/month_category_card"
            android:id="@+id/month_search_recycler"
            android:layout_below="@id/search_section_month_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>