<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    android:paddingTop="0dp"
    android:paddingBottom="16dp"
    android:paddingStart="0dp"
    android:paddingEnd="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:id="@+id/bottom_sheet_grabber"
        android:tint="@color/colorQuad"
        android:src="@drawable/round_button"
        android:layout_width="26dp"
        android:layout_height="4dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/bottom_sheet_account_ic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_account"
            android:tint="@color/colorFont"
            android:layout_width="32dp"
            android:layout_height="32dp"/>
        <TextView
            app:layout_constraintLeft_toRightOf="@id/bottom_sheet_account_ic"
            android:id="@+id/bottom_sheet_account_text_1"
            android:text="User"
            android:layout_marginStart="12dp"
            android:textSize="16sp"
            android:fontFamily="@font/productsansmedium"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintLeft_toRightOf="@id/bottom_sheet_account_ic"
            android:id="@+id/bottom_sheet_account_text_2"
            android:text="User"
            android:layout_marginStart="12dp"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/productsansmedium"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_account_text_1"
            android:textColor="@color/colorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:textAllCaps="false"
            android:background="@drawable/round_button_ripple"
            android:textColor="@color/colorFont"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:minHeight="32dp"
            android:fontFamily="@font/productsansmedium"
            app:layout_constraintStart_toStartOf="@id/bottom_sheet_account_text_2"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_account_text_2"
            android:id="@+id/bottom_sheet_account_button"
            android:text="Edit Name"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/line_seperator"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/selected_ripple">
        <ImageView
            android:tint="@color/colorSecondary"
            android:src="@drawable/ic_settings"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:layout_marginStart="14dp"
            android:textColor="@color/colorFont"
            android:fontFamily="@font/productsansmedium"
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/doc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/selected_ripple">
        <ImageView
            android:tint="@color/colorSecondary"
            android:src="@drawable/ic_doc"
            android:layout_width="22dp"
            android:layout_height="22dp"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:layout_marginStart="14dp"
            android:textColor="@color/colorFont"
            android:fontFamily="@font/productsansmedium"
            android:text="@string/documentation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/selected_ripple">
        <ImageView
            android:tint="@color/colorSecondary"
            android:src="@drawable/ic_question"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:layout_marginStart="14dp"
            android:textColor="@color/colorFont"
            android:fontFamily="@font/productsansmedium"
            android:text="@string/help_amp_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>